grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ =>
      seq(
        choice(
          $.pg_command,
          $.begin_statement,
          $.commit_statement,
          $.rollback_statement,
          $.select_statement,
          $.update_statement,
          $.insert_statement,
          $.delete_statement,
          $.set_statement,
          $.grant_statement,
          $.drop_statement,
          $.create_statement,
          $.alter_statement,
          $.truncate_statement,
          $.create_type_statement,
          $.create_domain_statement,
          $.create_index_statement,
          $.create_table_statement,
          $.create_schema_statement,
          $.create_role_statement,
          $.create_extension_statement,
          $.comment_statement,
          $.create_view_statement,
          $.create_materialized_view_statement,
        ),
        optional(";"),
      ),

    select_statement: $ => seq(optional($.with_clause), $._select_statement),
    truncate_statement: $ =>
      seq(
        kw("TRUNCATE"),
        optional(kw("TABLE")),
        optional(kw("ONLY")),
        commaSep1($._identifier),
      ),

    comment_statement: $ =>
      seq(
        kw("COMMENT ON"),
        choice(
          seq(
            choice(kw("COLUMN"), kw("EXTENSION"), kw("SCHEMA"), kw("TABLE")),
            $._identifier,
          ),
          seq(kw("FUNCTION"), $.function_call),
        ),
        kw("IS"),
        choice($.string, $.NULL),
      ),

    begin_statement: $ =>
      seq(kw("BEGIN"), optional(choice(kw("WORK"), kw("TRANSACTION")))),
    commit_statement: $ =>
      seq(kw("COMMIT"), optional(choice(kw("WORK"), kw("TRANSACTION")))),
    rollback_statement: $ =>
      seq(kw("ROLLBACK"), optional(choice(kw("WORK"), kw("TRANSACTION")))),

    create_statement: $ =>
      seq(
        kw("CREATE"),
        optional(choice(kw("TEMP"), kw("TEMPORARY"))),
        choice(alias($.sequence, $.create_sequence)),
      ),
    alter_statement: $ =>
      seq(
        kw("ALTER"),
        choice(
          alias($.sequence, $.alter_sequence),
          $.alter_table,
          alias($.alter_schema, $.schema),
        ),
      ),
    alter_table: $ =>
      seq(
        kw("TABLE"),
        optional(kw("IF EXISTS")),
        optional(kw("ONLY")),
        $._identifier,
        choice($.alter_table_action, $.alter_table_rename_column),
      ),
    alter_table_action_alter_column: $ =>
      seq(
        kw("ALTER COLUMN"),
        $._identifier,
        kw("SET DEFAULT"),
        $._column_default_expression,
      ),
    alter_table_action_add: $ =>
      seq(
        kw("ADD"),
        choice(seq(kw("COLUMN"), $.table_column), $._table_constraint),
      ),
    alter_table_action_set: $ => seq(kw("SET"), $._expression),
    alter_table_rename_column: $ =>
      seq(
        kw("RENAME"),
        optional(kw("COLUMN")),
        $._identifier,
        kw("TO"),
        $._identifier,
      ),
    alter_table_action: $ =>
      choice(
        $.alter_table_action_add,
        $.alter_table_action_alter_column,
        $.alter_table_action_set,
        alias($.alter_owner_action, $.alter_owner),
      ),
    pg_command: $ => seq(/\\[a-zA-Z]+/, /.*/),

    constrained_type: $ => seq($._type, $.null_constraint),

    create_extension_statement: $ =>
      prec.right(
        seq(
          kw("CREATE EXTENSION"),
          optional(kw("IF NOT EXISTS")),
          $._identifier,
          optional(kw("WITH")),
          repeat(
            choice(
              seq(kw("SCHEMA"), alias($._identifier, $.schema)),
              seq(kw("VERSION"), alias($.string, $.version)),
              kw("CASCADE"),
            ),
          ),
        ),
      ),
    create_role_statement: $ =>
      prec.right(
        seq(
          kw("CREATE ROLE"),
          $._identifier,
          optional(kw("WITH")),
          optional($._identifier),
        ),
      ),
    create_schema_statement: $ =>
      seq(kw("CREATE SCHEMA"), optional(kw("IF NOT EXISTS")), $._identifier),
    drop_statement: $ =>
      seq(
        kw("DROP"),
        field(
          "kind",
          choice(
            kw("TABLE"),
            kw("VIEW"),
            kw("INDEX"),
            kw("EXTENSION"),
            kw("TABLESPACE"),
            kw("MATERIALIZED VIEW"),
          ),
        ),
        optional(kw("CONCURRENTLY")),
        optional(kw("IF EXISTS")),
        field("target", commaSep1($._identifier)),
        optional(choice(kw("CASCADE"), kw("RESTRICT"))),
      ),
    set_statement: $ =>
      seq(
        kw("SET"),
        field("scope", optional(choice(kw("SESSION"), kw("LOCAL")))),
        $.identifier,
        choice("=", kw("TO")),
        choice($._expression, kw("DEFAULT")),
      ),
    grant_statement: $ =>
      prec.right(
        seq(
          kw("GRANT"),
          choice(
            seq(kw("ALL"), optional(kw("PRIVILEGES"))),
            repeat(
              choice(
                kw("SELECT"),
                kw("INSERT"),
                kw("UPDATE"),
                kw("DELETE"),
                kw("TRUNCATE"),
                kw("REFERENCES"),
                kw("TRIGGER"),
                kw("USAGE"),
              ),
            ),
          ),
          kw("ON"),
          field(
            "type",
            optional(
              choice(kw("SCHEMA"), kw("DATABASE"), kw("SEQUENCE"), kw("TABLE")),
            ),
          ),
          $._identifier,
          kw("TO"),
          choice(seq(optional(kw("GROUP")), $.identifier), kw("PUBLIC")),
          optional(kw("WITH GRANT OPTION")),
        ),
      ),
    create_domain_statement: $ =>
      prec.right(
        seq(
          kw("CREATE DOMAIN"),
          $._identifier,
          optional(
            seq(
              kw("AS"),
              $._type,
              repeat(choice($.null_constraint, $.check_constraint)),
            ),
          ),
        ),
      ),

    create_type_statement: $ =>
      prec.right(
        seq(
          kw("CREATE TYPE"),
          field("type_name", $._identifier),
          optional(
            choice(
              $.type_spec_composite,
              $.type_spec_enum,
              $.type_spec_range,
              $.type_spec_base,
            ),
          ),
        ),
      ),
    type_spec_composite: $ =>
      seq(
        kw("AS"),
        "(",
        commaSep1(seq($.identifier, choice($._type, $.constrained_type))),
        ")",
      ),
    type_spec_enum: $ =>
      seq(kw("AS"), kw("ENUM"), "(", commaSep($.string), ")"),
    type_spec_range: $ =>
      seq(
        kw("AS"),
        kw("RANGE"),
        "(",
        commaSep(
          choice(
            ...[
              "SUBTYPE",
              "SUBTYPE_OPCLASS",
              "COLLATION",
              "CANONICAL",
              "SUBTYPE_DIFF",
              "MULTIRANGE_TYPE_NAME",
            ].map(k => kv(k, $._identifier)),
          ),
        ),
        ")",
      ),
    type_spec_base: $ =>
      seq(
        "(",
        commaSep(
          choice(
            ...[
              ["INPUT", $._identifier],
              ["OUTPUT", $._identifier],
              ["RECEIVE", $._identifier],
              ["SEND", $._identifier],
              ["TYPMOD_IN", $._identifier],
              ["TYPMOD_OUT", $._identifier],
              ["ANALYZE", $._identifier],
              ["SUBSCRIPT", $._identifier],
              ["INTERNALLENGTH", choice($.number, kw("VARIABLE"))],
              ["PASSEDBYVALUE", null],
              ["ALIGNMENT", $._identifier],
              ["STORAGE", $._identifier],
              ["LIKE", $._identifier],
              ["CATEGORY", $.string],
              ["PREFERRED", $.string],
              ["DEFAULT", $._expression],
              ["ELEMENT", $._identifier],
              ["DELIMITER", $.string],
              ["COLLATABLE", $._identifier],
            ].map(([k, v]) => kv(k, v)),
          ),
        ),
        ")",
      ),

    create_index_with_clause: $ =>
      seq(
        kw("WITH"),
        "(",
        field("storage_parameter", $.identifier),
        "=",
        // TODO: Option value be special set e.g. accepting enum with ON, OFF, VALUE
        $._expression,
        ")",
      ),
    create_index_include_clause: $ =>
      seq(kw("INCLUDE"), "(", commaSep1($.identifier), ")"),
    create_index_statement: $ =>
      prec.right(
        seq(
          kw("CREATE"),
          optional($.unique_constraint),
          kw("INDEX"),
          optional(kw("CONCURRENTLY")),
          optional(
            seq(optional(kw("IF NOT EXISTS")), field("name", $.identifier)),
          ),
          kw("ON"),
          optional(kw("ONLY")),
          field("table_name", $._identifier),
          optional($.using_clause),
          $.index_table_parameters,
          optional($.create_index_include_clause),
          optional($.create_index_with_clause),
          optional($.where_clause),
        ),
      ),
    table_column: $ =>
      prec.right(
        seq(
          field("name", $._identifier),
          field("type", $._type),
          repeat(
            choice(
              $.default_clause,
              $.primary_key_constraint,
              $.check_constraint,
              $.references_constraint,
              $.unique_constraint,
              $.null_constraint,
              $.named_constraint,
              $.direction_constraint,
              $.auto_increment_constraint,
            ),
          ),
        ),
      ),
    direction_constraint: _ => choice(kw("ASC"), kw("DESC")),
    named_constraint: $ => seq("CONSTRAINT", $.identifier),
    _column_default_expression: $ =>
      choice(
        $.parenthesized_expression,
        $.string,
        $.number,
        $.identifier,
        $.function_call,
      ),
    default_clause: $ =>
      seq(
        kw("DEFAULT"),
        // TODO: this should be specific variable-free expression https://www.postgresql.org/docs/9.1/sql-createtable.html
        // TODO: simple expression to use for check and default
        choice($._column_default_expression, $.type_cast),
      ),
    table_parameters: $ =>
      seq(
        "(",
        optional(commaSep1(choice($.table_column, $._table_constraint))),
        ")",
      ),
    initial_mode: $ =>
      seq(kw("INITIALLY"), choice(kw("DEFERRED"), kw("IMMEDIATE"))),
    _table_constraint: $ =>
      prec.right(
        seq(
          optional(seq(kw("CONSTRAINT"), field("name", $._identifier))),
          choice(
            alias($.table_constraint_foreign_key, $.foreign_key),
            alias($.table_constraint_unique, $.unique),
            alias($.table_constraint_primary_key, $.primary_key),
            alias($.table_constraint_check, $.check),
            alias($.table_constraint_exclude, $.exclude),
          ),
          optional($.mode),
          optional($.initial_mode),
        ),
      ),
    op_class: $ => $._identifier,
    exclude_entry: $ =>
      seq(
        $._identifier,
        optional($.op_class),
        optional(seq(kw("WITH"), $.binary_operator)),
      ),
    primary_key_constraint: $ => kw("PRIMARY KEY"),
    create_table_statement: $ =>
      seq(
        kw("CREATE"),
        optional(choice(kw("TEMPORARY"), kw("TEMP"))),
        kw("TABLE"),
        optional(kw("IF NOT EXISTS")),
        $._identifier,
        choice(seq(kw("AS"), $.select_statement), $.table_parameters),
        optional(kw("WITHOUT OIDS")),
      ),
    using_clause: $ => seq(kw("USING"), field("method", $.identifier)),
    index_table_parameters: $ =>
      seq(
        "(",
        commaSep1(
          seq(
            choice($._expression, $.ordered_expression),
            optional($.op_class),
          ),
        ),
        ")",
      ),

    _select_statement: $ =>
      prec.right(
        seq(
          $.select_clause,
          optional($.from_clause),
          optional(repeat($.join_clause)),
          optional($.where_clause),
          optional($.group_by_clause),
          optional(commaSep1($.window_clause)),
          optional($._combining_query),
          optional($.order_by_clause),
          optional($.limit_clause),
          optional($.offset_clause),
        ),
      ),

    group_by_clause: $ =>
      seq(
        kw("GROUP BY"),
        commaSep1($.group_expression),
        optional($.having_clause),
      ),
    group_expression: $ =>
      choice(
        $._expression,
        $.grouping_sets_clause,
        $.rollup_clause,
        $.cube_clause,
      ),
    order_expression: $ =>
      seq(
        $._expression,
        optional(alias(choice(kw("ASC"), kw("DESC")), $.order)),
        optional(
          alias(
            seq(kw("NULLS"), choice(kw("FIRST"), kw("LAST"))),
            $.nulls_order,
          ),
        ),
      ),
    order_by_clause: $ => seq(kw("ORDER BY"), commaSep1($.order_expression)),
    where_clause: $ => seq(kw("WHERE"), $._expression),
    _aliasable_expression: $ =>
      prec.right(choice($._expression, alias($._aliased_expression, $.alias))),
    select_clause_body: $ =>
      commaSep1(
        seq(
          $._aliasable_expression,
          optional(seq(kw("INTO"), field("into", $.identifier))),
        ),
      ),
    select_clause: $ =>
      prec.right(seq(kw("SELECT"), optional($.select_clause_body))),
    from_clause: $ => seq(kw("FROM"), commaSep1($._aliasable_expression)),
    select_subexpression: $ =>
      prec(1, seq(optional(kw("LATERAL")), "(", $.select_statement, ")")),

    // UPDATE
    conditional_expression: $ =>
      seq(
        kw("CASE"),
        repeat1(seq(kw("WHEN"), $._expression, kw("THEN"), $._expression)),
        optional(seq(kw("ELSE"), $._expression)),
        kw("END"),
      ),

    in_expression: $ =>
      prec.left(
        PREC.comparative,
        seq($._expression, optional(kw("NOT")), kw("IN"), $.tuple),
      ),
    tuple: $ =>
      seq(
        // TODO: maybe collapse with function arguments, but make sure to preserve clarity
        "(",
        field("elements", commaSep1($._expression)),
        ")",
      ),
    // TODO: named constraints
    references_constraint: $ =>
      seq(
        kw("REFERENCES"),
        $._identifier,
        optional(seq("(", commaSep1($.identifier), ")")),
        // seems like a case for https://github.com/tree-sitter/tree-sitter/issues/130
        repeat(choice($.on_update_action, $.on_delete_action)),
      ),
    on_update_action: $ =>
      seq(kw("ON UPDATE"), field("action", $._constraint_action)),
    on_delete_action: $ =>
      seq(kw("ON DELETE"), field("action", $._constraint_action)),
    _constraint_action: $ =>
      choice(kw("RESTRICT"), kw("CASCADE"), kw("SET NULL")),
    unique_constraint: $ => kw("UNIQUE"),
    null_constraint: $ => seq(optional(kw("NOT")), $.NULL),
    check_constraint: $ => seq(kw("CHECK"), $._expression),
    function_call: $ =>
      seq(
        optional(kw("LATERAL")),
        field("function", $._identifier),
        "(",
        optional(field("arguments", $._function_call_arguments)),
        ")",
        optional($.within_group_clause),
        optional($.filter_clause),
        optional($.over_clause),
      ),
    _function_call_arguments: $ =>
      seq(
        optional(choice(kw("ALL"), kw("DISTINCT"))),
        commaSep1($._expression),
        optional($.order_by_clause),
      ),
    parenthesized_expression: $ =>
      prec.left(PREC.unary, seq("(", $._expression, ")")),
    is_expression: $ =>
      prec.left(
        PREC.comparative,
        seq(
          $._expression,
          kw("IS"),
          optional(kw("NOT")),
          choice($.NULL, $.TRUE, $.FALSE, $.distinct_from),
        ),
      ),
    distinct_from: $ => prec.left(seq(kw("DISTINCT FROM"), $._expression)),
    at_time_zone_expression: $ =>
      prec.left(
        PREC.primary,
        seq($._expression, kw("AT TIME ZONE"), $._expression),
      ),
    _unquoted_identifier: $ => /[a-zA-Z0-9_]+/,
