test/corpus/statements.txt
================================================================================
Numbers
================================================================================

SELECT 1, 1.2, -5, -1.3, 1E-37, 1E+37;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (number)
        (number)
        (unary_expression
          (number))
        (unary_expression
          (number))
        (number)
        (number)))))

================================================================================
SELECT statement
================================================================================

SELECT;
SELECT interval '1 minute';

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause))
  (select_statement
    (select_clause
      (select_clause_body
        (interval_expression
          (string
            (content)))))))

================================================================================
SELECT statement with distinct expression
================================================================================

SELECT 1 IS DISTINCT FROM NULL;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (is_expression
          (number)
          (distinct_from
            (NULL)))))))

================================================================================
SELECT statement FROM clause
================================================================================

SELECT a, b FROM table1;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (identifier)))
    (from_clause
      (identifier))))

================================================================================
SELECT statement with SELECT subexpression
================================================================================

SELECT (SELECT 1) AS a

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (alias
          (select_subexpression
            (select_statement
              (select_clause
                (select_clause_body
                  (number)))))
          (identifier))))))

================================================================================
SELECT statement with aliases
================================================================================

SELECT a, b AS c FROM table1 AS t;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (alias
          (identifier)
          (identifier))))
    (from_clause
      (alias
        (identifier)
        (identifier)))))

================================================================================
SELECT statement with group by
================================================================================

SELECT a, b
FROM table1
GROUP BY lower(a), b;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (identifier)))
    (from_clause
      (identifier))
    (group_by_clause
      (group_expression
        (function_call
          (identifier)
          (identifier)))
      (group_expression
        (identifier)))))

================================================================================
SELECT statement with order by
================================================================================

SELECT a, b FROM table1 ORDER BY lower(a), b;
SELECT a, b FROM table1 ORDER BY lower(a), b ASC;
SELECT a, b FROM table1 ORDER BY lower(a), b DESC;
SELECT a, b FROM table1 ORDER BY a ASC, b DESC;
SELECT a, b FROM table1 ORDER BY a ASC NULLS FIRST, b DESC NULLS LAST;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (identifier)))
    (from_clause
      (identifier))
    (order_by_clause
      (order_expression
        (function_call
          (identifier)
          (identifier)))
      (order_expression
        (identifier))))
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (identifier)))
    (from_clause
      (identifier))
    (order_by_clause
      (order_expression
        (function_call
          (identifier)
          (identifier)))
      (order_expression
        (identifier))))
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (identifier)))
    (from_clause
      (identifier))
    (order_by_clause
      (order_expression
        (function_call
          (identifier)
          (identifier)))
      (order_expression
        (identifier))))
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (identifier)))
    (from_clause
      (identifier))
    (order_by_clause
      (order_expression
        (identifier))
      (order_expression
        (identifier))))
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (identifier)))
    (from_clause
      (identifier))
    (order_by_clause
      (order_expression
        (identifier))
      (order_expression
        (identifier)))))

================================================================================
SELECT statement FROM multiple tables
================================================================================

SELECT a, b FROM table1, table2;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (identifier)))
    (from_clause
      (identifier)
      (identifier))))

================================================================================
SELECT statement with numbers
================================================================================

SELECT 1, 2;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (number)
        (number)))))

================================================================================
SELECT statement with expression
================================================================================

SELECT 1 + 2;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (binary_expression
          (number)
          (number))))))

================================================================================
SELECT statement with empty string
================================================================================

SELECT '';

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (string
          (content))))))

================================================================================
SELECT statement with dollar quoted string
================================================================================

SELECT $$hey$$;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (string
          (content))))))

================================================================================
SELECT statement with dollar quoted brackets inside
================================================================================

SELECT $$(a + b)$$;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (string
          (content))))))

================================================================================
SELECT statement with type cast
================================================================================

SELECT ''::JSONB;
SELECT CAST('' AS JSONB);
SELECT 100::CHAR(3)
SELECT CAST(100 AS CHAR(3))
SELECT CAST((1 + 2) AS CHAR(1))


--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (type_cast
          (string
            (content))
          (type
            (identifier))))))
  (select_statement
    (select_clause
      (select_clause_body
        (type_cast
          (string
            (content))
          (type
            (identifier))))))
  (select_statement
    (select_clause
      (select_clause_body
        (type_cast
          (number)
          (type
            (identifier)
            (number))))))
  (select_statement
    (select_clause
      (select_clause_body
        (type_cast
          (number)
          (type
            (identifier)
            (number))))))
  (select_statement
    (select_clause
      (select_clause_body
        (type_cast
          (parenthesized_expression
            (binary_expression
              (number)
              (number)))
          (type
            (identifier)
            (number)))))))

================================================================================
SELECT statement with columns
================================================================================

SELECT a, b;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (identifier)
        (identifier)))))

================================================================================
SELECT statement with comparison expression
================================================================================

SELECT 1 < 2;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (binary_expression
          (number)
          (number))))))

================================================================================
SELECT statement with is expression
================================================================================

SELECT a IS TRUE, b IS NOT NULL, c IS FALSE;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (is_expression
          (identifier)
          (TRUE))
        (is_expression
          (identifier)
          (NULL))
        (is_expression
          (identifier)
          (FALSE))))))

================================================================================
SELECT field
================================================================================

SELECT foo.bar FROM a;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (dotted_name
          (identifier)
          (identifier))))
    (from_clause
      (identifier))))

================================================================================
Operator precedence
================================================================================

SELECT 1 + -1, 1 <= 1;
SELECT 1 * 2 + 3, 3 + 1 * 2, (3 + 1) * 2;
SELECT 1 / 2 + 3, 3 + 1 / 2, (3 + 1) / 2;
SELECT @1, !!2, |/3, ||/4, ~5, -6, +7;
SELECT @ - 2;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (binary_expression
          (number)
          (unary_expression
            (number)))
        (binary_expression
          (number)
          (number)))))
  (select_statement
    (select_clause
      (select_clause_body
        (binary_expression
          (binary_expression
            (number)
            (number))
          (number))
        (binary_expression
          (number)
          (binary_expression
            (number)
            (number)))
        (binary_expression
          (parenthesized_expression
            (binary_expression
              (number)
              (number)))
          (number)))))
  (select_statement
    (select_clause
      (select_clause_body
        (binary_expression
          (binary_expression
            (number)
            (number))
          (number))
        (binary_expression
          (number)
          (binary_expression
            (number)
            (number)))
        (binary_expression
          (parenthesized_expression
            (binary_expression
              (number)
              (number)))
          (number)))))
  (select_statement
    (select_clause
      (select_clause_body
        (unary_expression
          (number))
        (unary_expression
          (number))
        (unary_expression
          (number))
        (unary_expression
          (number))
        (unary_expression
          (number))
        (unary_expression
          (number))
        (unary_expression
          (number)))))
  (select_statement
    (select_clause
      (select_clause_body
        (unary_expression
          (unary_expression
            (number)))))))

================================================================================
SELECT statement with comparison expression and is expression
================================================================================

SELECT 1 < 2 IS TRUE;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (is_expression
          (binary_expression
            (number)
            (number))
          (TRUE))))))

================================================================================
SELECT expression with function
================================================================================

SELECT foo(bar, baz) < 10;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (binary_expression
          (function_call
            (identifier)
            (identifier)
            (identifier))
          (number))))))

================================================================================
SELECT expression with function without args
================================================================================

SELECT foo(), test.bar(1, 2, 3);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (function_call
          (identifier))
        (function_call
          (dotted_name
            (identifier)
            (identifier))
          (number)
          (number)
          (number))))))

================================================================================
SELECT comparison expression boolean
================================================================================

SELECT TRUE AND foo(1) OR FALSE AND NOT a = b.c;

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (boolean_expression
          (boolean_expression
            (TRUE)
            (function_call
              (identifier)
              (number)))
          (boolean_expression
            (FALSE)
            (binary_expression
              (boolean_expression
                (identifier))
              (dotted_name
                (identifier)
                (identifier)))))))))

================================================================================
SELECT parenthesized expression
================================================================================

SELECT (TRUE);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (parenthesized_expression
          (TRUE))))))

================================================================================
SELECT parenthesized expression 2
================================================================================

SELECT TRUE AND (foo(1) OR FALSE);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (boolean_expression
          (TRUE)
          (parenthesized_expression
            (boolean_expression
              (function_call
                (identifier)
                (number))
              (FALSE))))))))

================================================================================
SELECT string
================================================================================

SELECT 'aaaa'

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (string
          (content))))))

================================================================================
SELECT weird_string
================================================================================

SELECT '%{a.b}'

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (string
          (content))))))

================================================================================
SELECT field_access
================================================================================

SELECT foo->>'bar'

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (json_access
          (identifier)
          (string
            (content)))))))

================================================================================
SELECT in clause
================================================================================

SELECT 1 IN (1, 2);

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (select_clause
      (select_clause_body
        (in_expression
          (number)
          (tuple
            (number)
            (number)))))))

================================================================================
CREATE TYPE statement
================================================================================

CREATE TYPE typename;
CREATE TYPE xest AS (data TEXT, val INT NOT NULL);

--------------------------------------------------------------------------------

(source_file
  (create_type_statement
    (identifier))
  (create_type_statement
    (identifier)
    (type_spec_composite
      (identifier)
      (type
        (identifier))
      (identifier)
      (constrained_type
        (type
          (identifier))
        (null_constraint
          (NULL))))))

================================================================================
CREATE TYPE enum
================================================================================

CREATE TYPE colors AS ENUM ('red', 'green', 'blue');

--------------------------------------------------------------------------------

(source_file
  (create_type_statement
    (identifier)
    (type_spec_enum
      (string
        (content))
      (string
        (content))
      (string
        (content)))))

================================================================================
CREATE TYPE range
================================================================================

CREATE TYPE type_name AS RANGE (
  SUBTYPE = date,
  SUBTYPE_DIFF = diff_func,
  CANONICAL = canonical_func
);

--------------------------------------------------------------------------------

(source_file
  (create_type_statement
    (identifier)
    (type_spec_range
      (identifier)
      (identifier)
      (identifier))))

================================================================================
CREATE TYPE base
================================================================================

CREATE TYPE type_name (
  internallength = 16, 
  input = in_func,
  output = out_func
);

--------------------------------------------------------------------------------

(source_file
  (create_type_statement
    (identifier)
    (type_spec_base
      (identifier)
      (identifier))))

================================================================================
CREATE DOMAIN
================================================================================

CREATE DOMAIN test;

--------------------------------------------------------------------------------

(source_file
  (create_domain_statement
    (identifier)))

================================================================================
CREATE DOMAIN with type
================================================================================

CREATE DOMAIN test AS text;

--------------------------------------------------------------------------------

(source_file
  (create_domain_statement
    (identifier)
    (type
      (identifier))))

================================================================================
CREATE DOMAIN with array type
================================================================================

CREATE DOMAIN test_arr AS text[];

--------------------------------------------------------------------------------

(source_file
  (create_domain_statement
    (identifier)
    (array_type
      (type
        (identifier)))))

================================================================================
CREATE DOMAIN type with constraint
================================================================================

CREATE DOMAIN test AS text NOT NULL;

--------------------------------------------------------------------------------

(source_file
  (create_domain_statement
    (identifier)
    (type
      (identifier))
    (null_constraint
      (NULL))))

================================================================================
CREATE DOMAIN array type with constraint
================================================================================

CREATE DOMAIN test AS text[] NOT NULL;

--------------------------------------------------------------------------------

(source_file
  (create_domain_statement
    (identifier)
    (array_type
      (type
        (identifier)))
    (null_constraint
      (NULL))))

================================================================================
CREATE INDEX
================================================================================

CREATE INDEX test_idx ON table(col1, col2);

--------------------------------------------------------------------------------

(source_file
  (create_index_statement
    (identifier)
    (identifier)
    (index_table_parameters
      (identifier)
      (identifier))))

================================================================================
CREATE UNIQUE INDEX
================================================================================

CREATE UNIQUE INDEX test_idx ON table(col1, col2);

--------------------------------------------------------------------------------

(source_file
  (create_index_statement
    (unique_constraint)
    (identifier)
    (identifier)
    (index_table_parameters
      (identifier)
      (identifier))))

================================================================================
CREATE INDEX with function
================================================================================

CREATE INDEX test_idx ON table(lower(col1), col2);
CREATE INDEX text_idx2 ON table(col2 text_pattern_ops);

--------------------------------------------------------------------------------

(source_file
  (create_index_statement
    (identifier)
    (identifier)
    (index_table_parameters
      (function_call
        (identifier)
        (identifier))
      (identifier)))
  (create_index_statement
    (identifier)
    (identifier)
    (index_table_parameters
      (identifier)
      (op_class
        (identifier)))))

================================================================================
CREATE INDEX where clause
================================================================================

CREATE INDEX test_idx ON table(col1) WHERE col1 IS NOT NULL;

--------------------------------------------------------------------------------

(source_file
  (create_index_statement
    (identifier)
    (identifier)
    (index_table_parameters
      (identifier))
    (where_clause
      (is_expression
        (identifier)
        (NULL)))))

================================================================================
CREATE INDEX where clause not equal
================================================================================

CREATE INDEX test_idx ON table(col1) WHERE col1 <> 1

--------------------------------------------------------------------------------

(source_file
  (create_index_statement
    (identifier)
    (identifier)
    (index_table_parameters
      (identifier))
    (where_clause
      (binary_expression
        (identifier)
        (number)))))

================================================================================
CREATE INDEX complex
================================================================================

CREATE INDEX foo_idx ON table1 (col2, (lower(col1->>'attr')));

--------------------------------------------------------------------------------

(source_file
  (create_index_statement
    (identifier)
    (identifier)
    (index_table_parameters
      (identifier)
      (parenthesized_expression
        (function_call
          (identifier)
          (json_access
            (identifier)
            (string
              (content))))))))

================================================================================
CREATE INDEX using
================================================================================

CREATE INDEX foo_idx ON table1 USING gist (col2);
CREATE INDEX bttest_a_idx ON bttest_a USING btree (id) WITH (deduplicate_items = off);
CREATE UNIQUE INDEX bttest_multi_idx ON bttest_multi USING btree (id) INCLUDE (data);

--------------------------------------------------------------------------------

(source_file
  (create_index_statement
    (identifier)
    (identifier)
    (using_clause
      (identifier))
    (index_table_parameters
      (identifier)))
  (create_index_statement
    (identifier)
    (identifier)
    (using_clause
      (identifier))
    (index_table_parameters
      (identifier))
    (create_index_with_clause
      (identifier)
      (identifier)))
  (create_index_statement
    (unique_constraint)
    (identifier)
    (identifier)
    (using_clause
      (identifier))
    (index_table_parameters
      (identifier))
    (create_index_include_clause
      (identifier))))

================================================================================
CREATE INDEX with order
================================================================================

CREATE INDEX foo_idx ON table1 (col2 DESC);

--------------------------------------------------------------------------------

(source_file
  (create_index_statement
    (identifier)
    (identifier)
    (index_table_parameters
      (ordered_expression
        (identifier)))))

================================================================================
CREATE TABLE
================================================================================

CREATE TABLE my_table (col1 INT, col2 INT);
CREATE TABLE my_table () WITHOUT OIDS;
CREATE TEMPORARY TABLE my_table2 (col1 INT, col2 INT);

--------------------------------------------------------------------------------

(source_file
  (create_table_statement
    (identifier)
    (table_parameters
      (table_column
        (identifier)
        (type
          (identifier)))
      (table_column
        (identifier)
        (type
          (identifier)))))
  (create_table_statement
    (identifier)
    (table_parameters))
  (create_table_statement
    (identifier)
    (table_parameters
      (table_column
        (identifier)
        (type
          (identifier)))
      (table_column
        (identifier)
        (type
          (identifier))))))

================================================================================
CREATE TABLE with timestamp
================================================================================

CREATE TABLE public.my_table (
    col1 INT PRIMARY KEY,
    created_at timestamp(6) without time zone NOT NULL,
    updated_at timestamp(6) without time zone NOT NULL DEFAULT (now() + INTERVAL '1 second')
);

--------------------------------------------------------------------------------
